# GARMIN-CLAUDE-CONNECTOR

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
scripts/: garmin_login.py
src/garmin_mcp/: auth.py  garmin_client.py  github_auth.py  server.py
